plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
        id 'org.openjfx.javafxplugin' version '0.1.0'
        id 'application'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

javafx{
    version="17.0.13"
    modules=['javafx.controls','javafx.fxml']
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-integration'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.integration:spring-integration-http'
	implementation 'org.springframework.integration:spring-integration-jpa'
	implementation 'org.springframework.integration:spring-integration-stomp'
	implementation 'org.springframework.integration:spring-integration-websocket'
	implementation 'org.springframework.integration:spring-integration-ws'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.integration:spring-integration-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        implementation 'org.openjfx:javafx-controls:17'
        implementation 'org.openjfx:javafx-fxml:17'
        implementation 'org.openjfx:javafx-base:17'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
        implementation 'com.google.guava:guava:31.1-jre'
        implementation 'org.springframework:spring-websocket'
        implementation 'org.springframework:spring-messaging'
        implementation 'org.java-websocket:Java-WebSocket:1.5.2'
        compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
        implementation 'jakarta.websocket:jakarta.websocket-client-api:2.1.1'
        implementation 'org.glassfish.tyrus:tyrus-client:2.1.2'
        implementation 'org.glassfish.tyrus:tyrus-container-grizzly-client:2.1.2'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
}

tasks.named('test') {
	useJUnitPlatform()
}

bootRun {
    jvmArgs = [
        "--module-path", "C:/Program Files/Java/javafx-sdk-17.0.13/lib",
        "--add-modules", "javafx.controls,javafx.fxml"
    ]
}

